# friday

./: Pipfile  agent_friday.py  frontend_server.py  pyproject.toml  requirements.txt  vercel.json
api/: token.py
friday/tools/: web.py
frontend/: app.js  index.css  index.html
scratch/: test_gemini.py
